--- a/loan_repayment.ipynb
+++ b/loan_repayment.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('seaborn-dark')\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -1568,9 +1568,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    9.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   22.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 330 out of 330 | elapsed:   40.7s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    6.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   15.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 330 out of 330 | elapsed:   28.5s finished\n"
      ]
     },
     {
@@ -1600,7 +1600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimator: ada_boost: \n",
+      "Estimator: clf ==> \n",
       " Classification Report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -1628,7 +1628,7 @@
     "clf_report = classification_report(y_test, pred)\n",
     "conf_matrix = confusion_matrix(y_test, pred)\n",
     "\n",
-    "print(f\"Estimator: {name}: \\n Classification Report: \\n{clf_report} \\nConfusion Matrix: \\n{conf_matrix} \\n\")\n",
+    "print(f\"Estimator: clf ==> \\n Classification Report: \\n{clf_report} \\nConfusion Matrix: \\n{conf_matrix} \\n\")\n",
     "print(\"==\" * 30)"
    ]
   },
